feat(inbox): add CTA button to view journey map in Figma with existing design-cta styles

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -461,8 +461,14 @@
                         <img src="assets/evolve_inbox_journey_map.svg" alt="User journey" />
                     </div>
                 </div>
+                <div class="design-cta">
+                    <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=154-37698&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">View the journey map in Figma</a>
+                </div>
             </div>
         </section>
+
+        
+
 
         <!-- Design section -->
         <section class="design-section">
