fix(designs): reduce h3→p gap to match solution section across breakpoints

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -102,7 +102,7 @@
         #journey-map .solution-placeholder img { width: 50% !important; margin-left: auto; margin-right: auto; }
         /* Designs section: emulate metrics layout */
         #designs .container { display: grid; grid-template-columns: repeat(12, minmax(0, 1fr)); gap: var(--space-64); align-items: start; max-width: 1920px; }
-        #designs h3 { grid-column: 1 / -1; margin: 0 0 var(--space-20); }
+        #designs .metrics-left h3 { margin: 0 0 var(--space-20); }
         #designs .metrics-left { grid-column: span 6; }
         #designs .metrics-left p { margin: 0 0 var(--space-12); }
         #designs .solution-image, #designs .design-cta { grid-column: 1 / -1; }
