feat(inbox): add ‘Opportunities we noted’ bulleted list in follow-up section

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -451,47 +451,6 @@
             </div>
         </section>
 
-        <!-- Designs (duplicate of Solution structure) -->
-        <section class="case-metrics solution-section">
-            <div class="container">
-                <div class="metrics-left">
-                    <h3 class="text-heading-3">Designs</h3>
-                    <p class="text-body-base">We needed to release quickly and gather learnings right away. We decided on a beta release focusing on Inbox for partner Airbnb bookings only. My key design questions were:</p>
-                    <p class="text-body-base"><span style="color: var(--color-fire-500);">How could we give guests direct access to owners when needed and allow owners to address booking requests on their own—without delays or bottlenecks?</span> I needed to build a seamless, transparent communication platform that let owners manage interactions and give guests a smooth experience, while making it clear which user was handling which request.</p>
-                    <p class="text-body-base"><span style="color: var(--color-fire-500);">How might we reframe success so owners see messaging as essential to rental performance?</span> Integrated education into UI and marketing, positioning Inbox as a core management tool to boost efficiency and engagement.</p>
-                    <p class="text-body-base">In addition to that, discovery showed most guest requests came 4–7 days pre-check-in, a critical window for connection. Rather than granting access only after check-in, I proposed opening messaging earlier to drive adoption and reduce issues. The team was on board with this idea and we adjusted the roadmap.</p>
-                    <p class="text-body-base">I then defined our success metrics with my PM:</p>
-                    <ul>
-                        <li class="text-body-base"><span class="text-body-base-bold">Owners:</span> Less reliance on off-platform tools, streamlined workflows, personalized guest experiences.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Guests:</span> Faster responses, fewer repeated questions, consistent communication.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Frontline teams:</span> Lower service costs, fewer escalations, greater transparency.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Business:</span> Higher NPS, improved response time, stronger review trends.</li>
-                    </ul>
-                    <p class="text-body-base">I started with mockups and an initial beta flow. I then created a user journey map to build empathy for the user. Once I presented the general design direction to the team, I worked with the Researcher to test the initial designs with users. We found in testing that our users thought the design was user-friendly, easy to understand, and matched their expectations.</p>
-                </div>
-                <div class="metrics-right">
-                    <div class="metrics-list">
-                        <div class="metrics-item">
-                            <p class="text-body-base-bold"><span style="color: var(--color-grey);">Key considerations</span></p>
-                            <ul>
-                                <li class="text-body-base">On-platform = safer than off-platform.</li>
-                                <li class="text-body-base">Users wanted quick, simple tools and were eager to engage.</li>
-                                <li class="text-body-base">Educating users on engagement and performance would be important for adoption.</li>
-                                <li class="text-body-base">Make it easy for users to handle guest requests so they continuously use the tool.</li>
-                            </ul>
-                        </div>
-                        <div class="metrics-item">
-                            <p class="text-body-base-bold"><span style="color: var(--color-grey);">Key risks</span></p>
-                            <ul>
-                                <li class="text-body-base">Owners saw extra workload.</li>
-                                <li class="text-body-base">Peak periods like seasons and special events introduced timing and usage risks. </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- One full-width image with caption -->
         <section id="mockups" class="solution-images">
             <div class="container">
@@ -522,14 +481,14 @@
         </section>
 
         <!-- Design section -->
-         <section class="case-designs">
-            <div class="container">
+       <section class="case-metrics solution-section">
+        <div class="container">
+            <div class="metrics-left">
                 <h3 class="text-heading-3">Designs</h3>
-                <div class="metrics-left">
-                    <p class="text-body-base">Due to the timeline of beta and releasing sooner to gather learnings, the beta was lean. I designed a minimal Inbox feature with a few educational interactions to help solve the problem of engagement and adoption. To make it easier for users to handle booking requests from Inbox, I created a pathway to the existing booking view.</p>
-                </div>
+                <p class="text-body-base">Due to the timeline of beta and releasing sooner to gather learnings, the beta was lean. I designed a minimal Inbox feature with a few educational interactions to help solve the problem of engagement and adoption. To make it easier for users to handle booking requests from Inbox, I created a pathway to the existing booking view.</p>
             </div>
-
+        </div>
+      </section>
 
          </section>
         <!-- Designs image section (matches other image sections) -->
@@ -546,6 +505,14 @@
                 </div>
             </div>
         </section>
+
+        <section class="case-metrics solution-section">
+            <div class="container">
+                <div class="metrics-left">
+                    <p class="text-body-base">I put together concepts to tackle the bigger problems we couldn’t solve in beta. Once the team aligned, my PM and I used them to reshape the roadmap and plan future releases through 2025. We ran several rounds of testing, and those ideas became the foundation for moving closer to our ideal state. A technical pivot later shifted the timeline, so they weren’t released while I was there—but the vision and groundwork were set for the team to carry forward.</p>
+                </div>
+            </div>
+          </section>
 
         <section id="designs" class="solution-images">
             <div class="container">
@@ -568,8 +535,8 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">What impact did we have?</h3>
-                    <p class="text-body-base">The beta rollout of Inbox demonstrated significant improvements for owners and guests alike.</p>
-                    <p class="text-body-base">We tracked adoption, friction, and sentiment using Sprig and Alchemer dashboards.</p>
+                    <p class="text-body-base">The beta rollout of Inbox demonstrated significant improvements for owners and guests alike. We tracked adoption, friction, and sentiment using Sprig and Alchemer dashboards.</p>
+                    
                 </div>
             </div>
         </section>
@@ -601,7 +568,13 @@
         <!-- Follow-up constrained to left column width -->
         <section class="case-metrics">
             <div class="container">
-                <div class="metrics-left"> </div>
+                <div class="metrics-left">
+                    <h3 class="text-heading-3">Opportunities we noted</h3>
+                    <ul>
+                        <li class="text-body-base">Due to what we hypothesize as disengagement from certain types of owner users or guest interactions that didn’t require a response, usage dropped to 35%. How could we better educate the user that increased owner engagement could increase positive guest reviews?</li>
+                        <li class="text-body-base">We didn’t notice a measurable shift in NPS scores around communication, only a 0.5pt increase in a 30-day analysis. We believe it was due to our beta group being relatively small. How could we increase NPS around communication in future iterations?</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
