--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -15,8 +15,9 @@
         .case-hero { padding: 120px 20px 80px; min-height: 100vh; background: var(--color-white); display: grid; place-items: center; }
         .case-hero .container { max-width: 1920px; margin: 0 80px; display: grid; grid-template-columns: repeat(12, minmax(0, 1fr)); gap: var(--space-20); align-items: center; }
         .case-hero .hero-content { grid-column: span 7; padding: 0; max-width: 870px; text-align: left; }
-        .case-hero .hero-media { grid-column: span 5 / -1; display: flex; justify-content: center; }
-        .hero-placeholder { width: 100%; height: 420px; background: var(--color-fire-100); border-radius: 16px; }
+        .case-hero .hero-media { grid-column: span 5 / -1; display: flex; justify-content: center; align-items: center; }
+        .hero-placeholder { width: 100%; height: 420px; background: var(--color-fire-100); border-radius: 16px; overflow: hidden; display: flex; align-items: center; justify-content: center; }
+        .hero-placeholder img { width: 100%; height: 100%; max-width: 100%; max-height: 100%; object-fit: contain; display: block; border-radius: inherit; }
         .launch-badge { display: inline-block; background: var(--color-off-black); color: var(--color-white); padding: 6px 10px; border-radius: 6px; font-size: 14px; font-weight: 700; letter-spacing: 0.02em; margin-bottom: var(--space-24); }
         
         /* Overview section: fire-50 background */
@@ -211,7 +212,9 @@
                     <h2 class="text-heading-2">Reimagining Owner – Guest Communication with Inbox</h2>
                 </div>
                 <div class="hero-media">
-                    <div class="hero-placeholder"></div>
+                    <div class="hero-placeholder">
+                        <img src="assets/evolve_inbox_project_thumbnail.svg" alt="Project thumbnail"/>
+                    </div>
                 </div>
             </div>
         </section>
@@ -569,7 +572,7 @@
         <section class="case-metrics">
             <div class="container">
                 <div class="metrics-left">
-                    <h3 class="text-heading-3">Opportunities we noted</h3>
+                    <p class="text-body-base-bold">Opportunities we noted</p>
                     <ul>
                         <li class="text-body-base">Due to what we hypothesize as disengagement from certain types of owner users or guest interactions that didn’t require a response, usage dropped to 35%. How could we better educate the user that increased owner engagement could increase positive guest reviews?</li>
                         <li class="text-body-base">We didn’t notice a measurable shift in NPS scores around communication, only a 0.5pt increase in a 30-day analysis. We believe it was due to our beta group being relatively small. How could we increase NPS around communication in future iterations?</li>
